--- a/style.css
+++ b/style.css
@@ -632,7 +632,73 @@
     background-image: url('img/banner/b19.jpg');
   }
 
+  #blog {
+    padding: 150px 150px 0 150px;
+  }
+
+  #blog .blog-box{
+    position: relative;
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    width: 100%;
+    padding-bottom: 90px ;
+  }
+
+  #blog .blog-img{
+    width: 50%;
+    margin-right:40px ;
+  }
+
+  #blog img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+
+  }
+
+  #blog .blog-details{
+    width: 50%;
+  }
+
+  .blog-details a{
+    position: relative;
+    text-decoration: none;
+    font-size: 11px;
+    color: #000;
+    font-weight: 700;
+    
+  }
+
+  .blog-details a::after{
+    position: absolute;
+    content: "";
+    width: 50px;
+    height: 1px;
+    background-color: #000;
+    top: 4px;
+    right: -60px;
+  }
+
+  .blog-box h1{
+    position: absolute;
+    top: -40px;
+    left: 0;
+    font-size: 70px;
+    font-weight: 700;
+    color: #c9c9c9;
+    z-index: -1;
+  }
+  
+
   /*end blog page */
+
+
+  /* about page  */
+  #page-header.about-header{
+    background-image: url('img/about/banner.png');
+  }
+  /* about page  */
 
 
   @media (max-width:799px) {
