--- a/style.css
+++ b/style.css
@@ -726,9 +726,13 @@
     height: 100%;
     border-radius: 20px;
   }
-  /* about page  */
+  /*end about page  */
 
-
+  /* contact page */
+    #page-header.contact-header{
+      background-image: url('img/banner/b2.jpg');
+    }
+  /* end contact page */
   @media (max-width:799px) {
     .section-p1 {
       padding: 40px 40px;
